[gd_scene load_steps=9 format=3 uid="uid://pgnwmwqmcl8r"]

[ext_resource type="Script" path="res://menus/finished_menu.gd" id="1_5g8xk"]
[ext_resource type="Texture2D" uid="uid://dsnme7647lun3" path="res://assets/GUI/Menu.png" id="4_kp46r"]
[ext_resource type="Texture2D" uid="uid://coqensw4ri1lm" path="res://assets/GUI/Gold_Disable.png" id="4_pygrk"]
[ext_resource type="FontFile" uid="uid://c7j7lsyd4yfdu" path="res://assets/Font/UVN Da Lat.TTF" id="5_7bda0"]
[ext_resource type="Texture2D" uid="uid://bvsf3h4m4thom" path="res://assets/GUI/Gold.png" id="5_c4wvc"]
[ext_resource type="Texture2D" uid="uid://c6a4u3nvfrwow" path="res://assets/GUI/Button.png" id="6_kgvwb"]
[ext_resource type="Texture2D" uid="uid://c3cmxe60c6no0" path="res://assets/GUI/Button (hover).png" id="7_ydvoc"]
[ext_resource type="AudioStream" uid="uid://c7refosgpf56u" path="res://assets/Sound/click.ogg" id="8_4h7lv"]

[node name="FinishedMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5g8xk")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1056.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Frame" type="TextureRect" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_kp46r")
stretch_mode = 2

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 303.0
offset_right = 1152.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("5_7bda0")
theme_override_font_sizes/font_size = 50
text = "Finished"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 399.0
offset_right = 1088.0
offset_bottom = 463.0
alignment = 1

[node name="GoldDisable1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_pygrk")

[node name="Gold1" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_c4wvc")

[node name="GoldDisable2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_pygrk")

[node name="Gold2" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_c4wvc")

[node name="GoldDisable3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_pygrk")

[node name="Gold3" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_c4wvc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 862.0
offset_top = 484.0
offset_right = 1058.0
offset_bottom = 718.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NextLevel" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_kgvwb")
texture_pressed = ExtResource("6_kgvwb")
texture_hover = ExtResource("7_ydvoc")

[node name="Spacing2" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Replay" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_kgvwb")
texture_pressed = ExtResource("6_kgvwb")
texture_hover = ExtResource("7_ydvoc")

[node name="Spacing" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MainMenu" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_kgvwb")
texture_pressed = ExtResource("6_kgvwb")
texture_hover = ExtResource("7_ydvoc")

[node name="NextLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 480.0
offset_right = 1152.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("5_7bda0")
theme_override_font_sizes/font_size = 37
text = "Next Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Replay" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 563.0
offset_right = 1152.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("5_7bda0")
theme_override_font_sizes/font_size = 37
text = "Replay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 717.0
theme_override_fonts/font = ExtResource("5_7bda0")
theme_override_font_sizes/font_size = 37
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4h7lv")

[connection signal="pressed" from="VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
